force-app/main/default/objects/Script_Metric__c/Script_Metric__c.object-meta.xml
<CustomObject>
    <description>Keeps track of how far an opportunity progresses with a given set of scripts. Used to collect information on usefulness of scripts.</description>
    <label>Script Metric</label>
    <nameField>
        <label>Script Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Script Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>