force-app/main/default/objects/Script_Metric__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Script Metrics</relationshipLabel>
    <relationshipName>Script_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>