force-app/main/default/objects/Script_Metric__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Keeps track of the last stage the opportunity made it to.</description>
    <label>Opportunity Stage</label>
    <length>32</length>
    <type>Text</type>
</CustomField>