force-app/main/default/objects/Script_Metric__c/fields/Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark if an Opportunity is won</description>
    <label>Opportunity Won</label>
    <type>Checkbox</type>
</CustomField>