force-app/main/default/objects/Script_Metric__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If there is a script for a specific user, then that gets added to the metric record. There is a version of this record without any users tied to it and then copies for different users. Since a user may have specific scripts assigned to him or her leading to a different set of scripts of an opportunity.</description>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Script_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>