force-app/main/default/objects/Script_Metric__c/fields/Scripts_Used__c.field-meta.xml
<CustomField>
    <fullName>Scripts_Used__c</fullName>
    <description>Stores a comma-sepparated list of stage names to script ids i.e. prospectin:scriptId1,Qualification:ScriptId2</description>
    <label>Scripts Used</label>
    <type>TextArea</type>
</CustomField>